--- a/pages/home.html
+++ b/pages/home.html
@@ -1,1 +1,9 @@
-home.html
+<div class="row">
+    <div class="col-md-6 col-md-offset-3">
+        <h4>Pratilipi Book Display</h4>
+        <div class="form-group">
+            <input type="text" ng-model="id" class="form-control" />
+        </div>
+        <a href="#/book" class="btn btn-primary">Show Book</a>
+    </div>
+</div> 
