--- a/index.html
+++ b/index.html
@@ -15,6 +15,155 @@
         {
             font-size: 1.05em;
         }
+        body {
+  padding-top: 20px;
+}
+
+
+.phone-images {
+  background-color: white;
+  width: 400px;
+  height: 450px;
+  overflow: hidden;
+  position: relative;
+  float: left;
+}
+#thumbhead{
+    height:350px;
+    width:250px;
+    padding: 15px;
+
+}
+ .btn-orange{
+            background: #ff652f;
+            color: #fff;
+            text-shadow: 0 -1px 0 #c83400;
+        }
+        .btn-mint{
+            background: #5bc5a7;
+            color: #fff;
+            text-shadow: 0 -1px 0 #318970;
+        }
+
+.phones {
+  list-style: none;
+}
+#thumb{
+    height:75px;
+    width:50px;
+}
+
+.thumb {
+  float: left;
+  margin: -0.5em 1em 1.5em 0;
+  padding-bottom: 1em;
+  height: 50px;
+  width: 100px;
+}
+
+.phones li {
+  clear: both;
+  height: 115px;
+  padding-top: 15px;
+}
+
+/** Detail View **/
+img.phone {
+  float: left;
+  margin-right: 3em;
+  margin-bottom: 2em;
+  background-color: white;
+  padding: 2em;
+  height: 350px;
+  width: 400px;
+  display: none;
+}
+
+img.phone:first-child {
+  display: block;
+}
+
+
+ul.phone-thumbs {
+  margin: 0;
+  list-style: none;
+}
+
+ul.phone-thumbs li {
+  border: 1px solid black;
+  display: inline-block;
+  margin: 1em;
+  background-color: white;
+}
+
+ul.phone-thumbs img {
+  height: 100px;
+  width: 100px;
+  padding: 1em;
+}
+
+ul.phone-thumbs img:hover {
+  cursor: pointer;
+}
+
+
+ul.specs {
+  clear: both;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+ul.specs > li{
+  display: inline-block;
+  width: 200px;
+  vertical-align: top;
+}
+
+ul.specs > li > span{
+  font-weight: bold;
+  font-size: 1.2em;
+}
+
+ul.specs dt {
+  font-weight: bold;
+}
+
+h1 {
+  border-bottom: 1px solid gray;
+}
+.social:hover {
+     -webkit-transform: scale(1.1);
+     -moz-transform: scale(1.1);
+     -o-transform: scale(1.1);
+ }
+ .social {
+     -webkit-transform: scale(0.8);
+     /* Browser Variations: */
+     
+     -moz-transform: scale(0.8);
+     -o-transform: scale(0.8);
+     -webkit-transition-duration: 0.5s;
+     -moz-transition-duration: 0.5s;
+     -o-transition-duration: 0.5s;
+ }
+
+/*
+    Multicoloured Hover Variations
+*/
+ 
+ #social-fb{
+     color: #3B5998;
+ }
+ #social-tw{
+     color: #4099FF;
+ }
+ #social-gp{
+     color: #d34836;
+ }
+ #social-em{
+     color: #f39c12;
+ }
 
 
     </style>
@@ -42,6 +191,10 @@
                 <ul class ="nav navbar-nav navbar-right">
                     <li><a href="#"><i class="fa fa-home"></i>Home</a>
                     </li>
+                    <li><a href="#">Login</a>
+                    </li>
+                    <li><a href="#">Logout</a>
+                    </li>
                 </ul>
             </div>
             </nav>
@@ -51,6 +204,25 @@
               <div ng-view></div>
                    
         </div>
+        <footer>
+            <div class="container">
+                <hr/>
+                <div class="row">
+           <div class="col-md-6">
+            <h5><a href="https://www.pratilipi.com/">Pratlipi</a></h5>
+            <h5><a href="#">contact@pratilipi.con</a></h5>
+            <h5><a href="#">99999999999</a></h5>
+           </div>
+        <div class=" col-md-6 text-right center-block">
+                <a href="https://www.facebook.com/Pratilipi"><i id="social-fb" class="fa fa-facebook-square fa-3x social"></i></a>
+                <a href="https://twitter.com/pratilipi"><i id="social-tw" class="fa fa-twitter-square fa-3x social"></i></a>
+                <a href="https://plus.google.com/+pratilipi"><i id="social-gp" class="fa fa-google-plus-square fa-3x social"></i></a>
+                <a href="mailto:pratlipi@pratlipiti.com"><i id="social-em" class="fa fa-envelope-square fa-3x social"></i></a>
+</div>
+    <hr />
+</div>
+</div>
+        </footer>
     </body>
 </html>                   
 
